<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/dashboard" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

 	<include android:id="@+id/dashboard_header" layout="@layout/header" />
	
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:background="@color/bodyBackground_light_grey"
		android:layout_weight="1" android:padding="6dip">
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1">
			<Button android:id="@+id/home_btn_new_item" style="@style/HomeButton"
				android:onClick="onClickFeature" android:text="@string/title_new_item"
				android:drawableTop="@drawable/ic_heart_96by96" />
			<Button android:id="@+id/home_btn_wishlist" style="@style/HomeButton"
				android:onClick="onClickFeature" android:text="@string/title_wishlist"
				android:drawableTop="@drawable/ic_list_96by96" />
		</LinearLayout>

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1">
			<Button android:id="@+id/home_btn_camera" style="@style/HomeButton"
				android:onClick="onClickFeature" android:text="@string/title_camera"
				android:drawableTop="@drawable/ic_camera_96by96" />
		 	<Button android:id="@+id/home_btn_settings" style="@style/HomeButton"
				android:onClick="onClickFeature" android:text="@string/title_settings"
				android:drawableTop="@drawable/ic_tools_96by96" />
	<!--			android:visibility="invisible" />
			
 			<Button android:id="@+id/home_btn_scan" style="@style/HomeButton"
				android:onClick="onClickFeature" android:text="@string/title_scan"
				android:drawableTop="@drawable/home_button4" />
-->
		</LinearLayout>
<!-- 
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1">
			<Button android:id="@+id/home_btn_help" style="@style/HomeButton"
				android:onClick="onClickFeature" android:text="@string/title_help"
				android:drawableTop="@drawable/home_button6" />
		</LinearLayout>
 -->
	</LinearLayout>

</LinearLayout>
